@@ -1,5 +1,5 @@
-Machine (3958MB total)
-  NUMANode P#0 (3958MB)
+Machine (3958MiB total)
+  NUMANode P#0 (3958MiB)
   PU P#0
   PU P#1
   PU P#2
