@@ -1,37 +1,37 @@
 ** Default output...
-Machine (2048MB total) + Package L#0
+Machine (2048MiB total) + Package L#0
   Core L#0
-    NUMANode L#0 (P#0 1024MB)
-    L2 L#0 (4096KB)
+    NUMANode L#0 (P#0 1024MiB)
+    L2 L#0 (4096KiB)
       PU L#0 (P#0)
       PU L#1 (P#1)
-    L2 L#1 (4096KB)
+    L2 L#1 (4096KiB)
       PU L#2 (P#2)
       PU L#3 (P#3)
   Core L#1
-    NUMANode L#1 (P#1 1024MB)
-    L2 L#2 (4096KB)
+    NUMANode L#1 (P#1 1024MiB)
+    L2 L#2 (4096KiB)
       PU L#4 (P#4)
       PU L#5 (P#5)
-    L2 L#3 (4096KB)
+    L2 L#3 (4096KiB)
       PU L#6 (P#6)
       PU L#7 (P#7)
 ** OS-index output merged...
-Machine (2048MB total)
+Machine (2048MiB total)
   Core P#0
-    NUMANode P#0 (1024MB)
-    L2 (4096KB)
+    NUMANode P#0 (1024MiB)
+    L2 (4096KiB)
       PU P#0
       PU P#1
-    L2 (4096KB)
+    L2 (4096KiB)
       PU P#2
       PU P#3
   Core P#1
-    NUMANode P#1 (1024MB)
-    L2 (4096KB)
+    NUMANode P#1 (1024MiB)
+    L2 (4096KiB)
       PU P#4
       PU P#5
-    L2 (4096KB)
+    L2 (4096KiB)
       PU P#6
       PU P#7
 ** Logical-index verbose output...
@@ -117,38 +117,38 @@ Package:1 Core:2 [NUMANode(memory=1073741824)] L2Cache:2(size=4194304) PU:2
   <support name="custom.exported_support"/>
 </topology>
 ** Restrict flag cpuless...
-Machine (1024MB total)
-  NUMANode L#0 (P#1 1024MB)
+Machine (1024MiB total)
+  NUMANode L#0 (P#1 1024MiB)
   PU L#0 (P#4)
   PU L#1 (P#5)
   PU L#2 (P#6)
   PU L#3 (P#7)
 ** Restrict flag t$,memless...
-Machine (2048MB total)
+Machine (2048MiB total)
   Group0 L#0
-    NUMANode L#0 (P#0 1024MB)
+    NUMANode L#0 (P#0 1024MiB)
     PU L#0 (P#0)
     PU L#1 (P#1)
     PU L#2 (P#2)
     PU L#3 (P#3)
   Group0 L#1
-    NUMANode L#1 (P#1 1024MB)
+    NUMANode L#1 (P#1 1024MiB)
     PU L#4 (P#4)
     PU L#5 (P#5)
     PU L#6 (P#6)
     PU L#7 (P#7)
 ** Restrict flag none...
-Machine (4096MB total)
+Machine (4096MiB total)
   Group0 L#0
-    NUMANode L#0 (P#0 1024MB)
+    NUMANode L#0 (P#0 1024MiB)
     PU L#0 (P#0)
     PU L#1 (P#1)
   Group0 L#1
-    NUMANode L#1 (P#3 1024MB)
+    NUMANode L#1 (P#3 1024MiB)
   Group0 L#2
-    NUMANode L#2 (P#2 1024MB)
+    NUMANode L#2 (P#2 1024MiB)
   Group0 L#3
-    NUMANode L#3 (P#1 1024MB)
+    NUMANode L#3 (P#1 1024MiB)
 ** Export synthetic flag extended,attrs,v1...
 Group:4 NUMANode:1 PU:4
 ** Export XML flag v1...
